--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-sass": "~0.7.3",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-cssmin": "~0.9.0"
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-ftp": "~0.1.0",
+    "grunt-ftp-deploy": "~0.1.2",
+    "grunt-ftp-push": "~0.1.3"
   }
 }
