--- a/js/projects.json
+++ b/js/projects.json
@@ -41,6 +41,12 @@
             "title" : "Tasks",
             "description" : "<p>I built this web application over my 2013 Christmas Break (yeah, I was that bored). It's build with a more object-oriented approach in PHP - along with MySQL, HTML5, etc. I'm incorporating Bootstrap css and javascript framework along with jQuery in places.</p><p>The application features the ability to add and modify 'tasks' which compile into 'lists', which you can also add and edit. This adds a little organization to putting your tasklists together. You can set a due date for certain tasks to be completed, and can move them from list to list as well. The app is also built to manage many user accounts (login & logot), as lists are associated with the user that is logged in. This is where my relational database design comes into play, making good use of foreign keys and being efficient with querying the database and managing all the incoming data.</p><p>There is currently no way to sign yourself up for an account, but if you <a href='contact.php'>get in touch with me</a> I can give you a username to demo with.</p>",
             "link" : "http://www.nathanfrancy.com/tasks"
+        },
+        {
+            "id" : 7,
+            "title" : "Bittersweet Place of Warrensburg",
+            "description" : "<p>This was a project that I did for the local organization Bittersweet Place, which is a free program offering help for children and teens with losing a loved one.</p><p>The project was done with Wordpress CMS; Bittersweet also uses the site to enroll new children and teens, as well as letting people submit interest in volunteering. There is lots of great content, which the organization handles completely on their own.</p>",
+            "link" : "http://www.bittersweetplace.org"
         }
     ]
 }
