--- a/js/projects.json
+++ b/js/projects.json
@@ -47,6 +47,13 @@
             "title" : "Bittersweet Place of Warrensburg",
             "description" : "<p>This was a project that I did for the local organization Bittersweet Place, which is a free program offering help for children and teens with losing a loved one.</p><p>The project was done with Wordpress CMS; Bittersweet also uses the site to enroll new children and teens, as well as letting people submit interest in volunteering. There is lots of great content, which the organization handles completely on their own.</p>",
             "link" : "http://www.bittersweetplace.org"
+        },
+        {
+            "id" : 8,
+            "title" : "Book Xchange",
+            "description" : "<p>I did this project as a part of a group project my senior year, for my Web Programming class at UCM. It's built with PHP + MySQL and some jQuery here and there.</p><p>The site features the ability to <a href='http://www.nathanfrancy.com/book-xchange/register.php'>register for an account</a>, and then be able to sign in to see books that have been added and are available for purchase. You can purchase others' books, although inputting purchase information was outside the project scope, so you will basically just click a couple buttons to purchase, and the book will be added to your account.</p>",
+            "link" : "http://www.nathanfrancy.com/book-xchange"
+            
         }
     ]
 }
